--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Change Directory
-      run: cd src\testAPI\testAPI
+      run: cd src/testAPI/testAPI
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
