--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./src/testAPI/testAPI
+        working-directory: ./src/testAPI
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
