--- a/src/testAPI/service.yaml
+++ b/src/testAPI/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: TestNetCoreWithTests
+  name: webapi
 spec:
   selector:
-    app: TestNetCoreWithTests
+    app: webapi
   ports:
   - port: 80  
     targetPort: 8080
