--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           image: hcobiancart/test
           registry: docker.io
-          directory: ./src/testAPI
+          dockerfile: ./src/testAPI
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
