--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           image: hcobiancart/test
           registry: docker.io
-          dockerfile: ./src/testAPI/dockerfile
+          dockerfile: ./src/testAPI/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
