--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -63,7 +63,7 @@ jobs:
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |-
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG
+        docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
 
     # Set up kustomize
     - name: Set up Kustomize
