--- a/src/testAPI/deployment.yaml
+++ b/src/testAPI/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: webapi
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: webapi
@@ -20,3 +20,16 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "300m"
+        ports:
+        - containerPort: 80
+        env:
+        - name: "ASPNETCORE_ENVIRONMENT"
+          value: "Development2"
+        volumeMounts:
+        - name: secrets
+          mountPath: /app
+          readOnly: true
+      volumes:
+      - name: secrets
+        secret:
+          secretName: secret-appsettings
