--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -70,7 +70,10 @@ jobs:
       run: |-
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
-
+    # Create a secret
+    - name: Create the secret
+      run: |- 
+        kubectl create secret generic secret-appsettings --from-file=./appsettings.Development2.json
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
