--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -73,7 +73,7 @@ jobs:
     # Create a secret
     - name: Create the secret
       run: |- 
-        kubectl create secret generic secret-appsettings --from-file=./appsettings.Development2.json
+        kubectl create secret generic secret-appsettings --from-file=./src/testAPI/appsettings.Development2.json
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
