--- a/src/testAPI/Dockerfile
+++ b/src/testAPI/Dockerfile
@@ -4,7 +4,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
-
+ENV ASPNETCORE_ENVIRONMENT Development
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["testAPI/testAPI.csproj", "testAPI/"]
