--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./src
+        working-directory: ./src/testAPI
     environment: production
 
     steps:
