--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -37,6 +37,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - uses: microsoft/variable-substitution@v1 
+      with:
+        files: './testAPI/*.json,'
+      env:
+        Auth0Management.Domain: "value2"
+        Auth0Management.client_id: ${{ secrets.client_id }}
+
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@v0.2.0
       with:
