--- a/src/testAPI/testAPI/appsettings.Development.json
+++ b/src/testAPI/testAPI/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "Auth0Management": {
-    "Domain": "https://cartid-dev.us.auth0.com",
+    "Domain": "",
     "audience": "https://cartid-dev.us.auth0.com/api/v2/",
-    "client_id": "66z1xdbcFRo4q5LezNxdtEclADNpZ7QD"
+    "client_id": ""
   }
 }
