--- a/src/testAPI/testAPI/appsettings.json
+++ b/src/testAPI/testAPI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0Management": {
+    "Domain": "",
+    "audience": "https://cartid-dev.us.auth0.com/api/v2/",
+    "client_id": ""
+  }
 }
