--- a/src/testAPI/testAPI/appsettings.Development.json
+++ b/src/testAPI/testAPI/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "Auth0Management": {
     "Domain": "",
-    "audience": "https://cartid-dev.us.auth0.com/api/v2/",
+    "audience": "",
     "client_id": ""
   }
 }
