--- a/src/testAPI/testAPI/appsettings.json
+++ b/src/testAPI/testAPI/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Auth0Management": {
     "Domain": "",
-    "audience": "https://cartid-dev.us.auth0.com/api/v2/",
+    "audience": "",
     "client_id": ""
   }
 }
