--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -67,8 +67,8 @@ jobs:
     - name: Build
       run: |-
         docker build \
-          -e ASPNETCORE_ENVIRONMENT="Development" \
           --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
+          --build-arg ASPNETCORE_ENVIRONMENT="Development"
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
           .
