--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -68,7 +68,7 @@ jobs:
       run: |-
         docker build \
           --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-          --build-arg ASPNETCORE_ENVIRONMENT="Development"
+          --build-arg ASPNETCORE_ENVIRONMENT="Development" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
           .
