--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -29,8 +29,7 @@ jobs:
     defaults:
       run:
         working-directory: ./src/testAPI
-    environment: 
-      name: Development
+    environment:  Development
 
     steps:
     - name: Checkout
