--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  DEPLOYMENT_NAME: webapi # TODO: update to deployment name
+  DEPLOYMENT_NAME: webapi-dev-deployment # TODO: update to deployment name
   IMAGE: webapi
 
 jobs:
@@ -67,7 +67,6 @@ jobs:
       run: |-
         docker build \
           --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-          --build-arg ASPNETCORE_ENVIRONMENT="Development" \
           .
 
     # Push the Docker image to Google Container Registry
@@ -86,7 +85,7 @@ jobs:
       run: |-
         ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
         ./kustomize build . | kubectl apply -f -
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
+        kubectl rollout status deployment/webapi-dev
         kubectl get services -o wide
 
   Deploy-Production:
@@ -134,7 +133,6 @@ jobs:
       run: |-
         docker build \
           --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-          --build-arg ASPNETCORE_ENVIRONMENT="Development" \
           .
 
     # Push the Docker image to Google Container Registry
