--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
     - name: $GITHUB_SHA
       run: |-
-        echo $GITHUB_SHA
+        echo "$GITHUB_SHA"
         
     - name: Checkout
       uses: actions/checkout@v2
