--- a/src/testAPI/dev/service.yaml
+++ b/src/testAPI/dev/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapi-dev-service
-  namespace: default
+  namespace: cart-dev-webapi
   labels:
     app: webapi-dev
 spec:
