--- a/src/testAPI/staging/deployment.yaml
+++ b/src/testAPI/staging/deployment.yaml
@@ -2,36 +2,36 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: webapi-dev-config-gcmc
-  namespace: cart-dev-webapi
+  name: webapi-staging-config-gcmc
+  namespace: cart-staging-webapi
   labels:
-    app: webapi-dev
+    app: webapi-staging
 data:
-  ASPNETCORE_ENVIRONMENT: Development
+  ASPNETCORE_ENVIRONMENT: Staging
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webapi-dev
+  name: webapi-staging
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: webapi-dev
+      app: webapi-staging
   template:
     metadata:
       labels:
-        app: webapi-dev
+        app: webapi-staging
     spec:
       containers:
-      - name: webapi-dev
+      - name: webapi-staging
         image: gcr.io/PROJECT_ID/IMAGE:TAG
         env:
         - name: ASPNETCORE_ENVIRONMENT
           valueFrom:
             configMapKeyRef:
               key: ASPNETCORE_ENVIRONMENT
-              name: webapi-dev-config-gcmc
+              name: webapi-staging-config-gcmc
         imagePullPolicy: Always
         resources:
           limits:
@@ -41,14 +41,14 @@ spec:
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: webapi-dev-hpa-zlar
-  namespace: cart-dev-webapi
+  name: webapi-staging-hpa-zlar
+  namespace: cart-staging-webapi
   labels:
-    app: webapi-dev
+    app: webapi-staging
 spec:
   scaleTargetRef:
     kind: Deployment
-    name: webapi-dev
+    name: webapi-staging
     apiVersion: apps/v1
   minReplicas: 1
   maxReplicas: 5
