--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -78,15 +78,15 @@ jobs:
     # Set up kustomize
     - name: Set up Kustomize
       run: |-
-        ls
+        cd dev
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./dev/kustomize
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        ./dev/kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
-        ./dev/kustomize build . | kubectl apply -f -
+        ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
+        ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/webapi-dev
         kubectl get services -o wide
 
