--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -80,7 +80,7 @@ jobs:
       run: |-
         cd dev
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./dev/kustomize
+        chmod u+x ./kustomize
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
