--- a/src/testAPI/dev/service.yaml
+++ b/src/testAPI/dev/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapi-dev-service
-  namespace: defaults
+  namespace: default
   labels:
     app: webapi-dev
 spec:
