--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -29,21 +29,42 @@ jobs:
     defaults:
       run:
         working-directory: ./src/testAPI
-    environment:  Development
+    environment: Development
 
     steps:
 
     - name: Checkout
       uses: actions/checkout@v2
-
+      
+    # Insert values to appappsettings.Development file
     - uses: microsoft/variable-substitution@v1 
       with:
-        files: '**/appsettings.json'
+        files: '**/appsettings.Development.json'
       env:
-        Auth0Management.Domain: ${{ secrets.AUTH0MANAGEMENT_DOMAIN }}
-        Auth0Management.client_id: ${{ secrets.AUTH0MANAGEMENT_CLIENT_ID }}
-        Auth0Management.audience: ${{ secrets.AUTH0MANAGEMENT_AUDIENCE }}
-        Auth0Management.client_secret: ${{ secrets.AUTH0MANAGEMENT_CLIENT_SECRET }}
+        Auth0Management.Domain: ${{ secrets.DEV_AUTH0MANAGEMENT_DOMAIN }}
+        Auth0Management.client_id: ${{ secrets.DEV_AUTH0MANAGEMENT_CLIENT_ID }}
+        Auth0Management.audience: ${{ secrets.DEV_AUTH0MANAGEMENT_AUDIENCE }}
+        Auth0Management.client_secret: ${{ secrets.DEV_AUTH0MANAGEMENT_CLIENT_SECRET }}
+
+    # Insert values to appappsettings.Staging file
+    - uses: microsoft/variable-substitution@v1 
+      with:
+        files: '**/appsettings.Staging.json'
+      env:
+        Auth0Management.Domain: ${{ secrets.STA_AUTH0MANAGEMENT_DOMAIN }}
+        Auth0Management.client_id: ${{ secrets.STA_AUTH0MANAGEMENT_CLIENT_ID }}
+        Auth0Management.audience: ${{ secrets.STA_AUTH0MANAGEMENT_AUDIENCE }}
+        Auth0Management.client_secret: ${{ secrets.STA_AUTH0MANAGEMENT_CLIENT_SECRET }}
+
+    # Insert values to appappsettings.Production file
+    - uses: microsoft/variable-substitution@v1 
+      with:
+        files: '**/appsettings.Production.json'
+      env:
+        Auth0Management.Domain: ${{ secrets.PRO_AUTH0MANAGEMENT_DOMAIN }}
+        Auth0Management.client_id: ${{ secrets.PRO_AUTH0MANAGEMENT_CLIENT_ID }}
+        Auth0Management.audience: ${{ secrets.PRO_AUTH0MANAGEMENT_AUDIENCE }}
+        Auth0Management.client_secret: ${{ secrets.PRO_AUTH0MANAGEMENT_CLIENT_SECRET }}
 
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@v0.2.0
@@ -138,3 +159,52 @@ jobs:
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/webapi-staging
         kubectl get services -o wide
+
+  Deploy-Production:
+    name: Deploy-Production 
+    needs: [Deploy-Staging]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src/testAPI
+    environment: production
+
+    steps:
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    # Setup gcloud CLI
+    - uses: google-github-actions/setup-gcloud@v0.2.0
+      with:
+        service_account_key: ${{ secrets.GKE_SA_KEY }}
+        project_id: ${{ secrets.GKE_PROJECT }}
+
+    # Configure Docker to use the gcloud command-line tool as a credential
+    # helper for authentication
+    - run: |-
+        gcloud --quiet auth configure-docker
+
+    # Get the GKE credentials so we can deploy to the cluster
+    - uses: google-github-actions/get-gke-credentials@v0.2.1
+      with:
+        cluster_name: ${{ secrets.GKE_CLUSTER }}
+        location: ${{ secrets.GKE_ZONE }}
+        credentials: ${{ secrets.GKE_SA_KEY }}
+
+    # Set up kustomize
+    - name: Set up Kustomize
+      run: |-
+        cd production
+        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+        chmod u+x ./kustomize
+
+    # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |-
+        cd production
+        ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
+        ./kustomize build . | kubectl apply -f -
+        kubectl rollout status deployment/webapi-production
+        kubectl get services -o wide
+      
