--- a/src/testAPI/production/service.yaml
+++ b/src/testAPI/production/service.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cart-staging-api-service
+  name: cart-prod-api-service
   namespace: default
   labels:
-    app: cart-staging-api
+    app: cart-prod-api
 spec:
   ports:
   - protocol: TCP
     port: 80
   selector:
-    app: cart-staging-api
+    app: cart-prod-api
   type: LoadBalancer
   loadBalancerIP: ""
