--- a/src/testAPI/testAPI/appsettings.Development.json
+++ b/src/testAPI/testAPI/appsettings.Development.json
@@ -6,9 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "",
+    "ApiIdentifier": ""
+  },
   "Auth0Management": {
     "Domain": "",
     "audience": "",
-    "client_id": ""
+    "client_id": "",
+    "client_secret": ""
   }
 }
