--- a/src/testAPI/testAPI/appsettings.json
+++ b/src/testAPI/testAPI/appsettings.json
@@ -7,9 +7,14 @@
     }
   },
   "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "",
+    "ApiIdentifier": ""
+  },
   "Auth0Management": {
     "Domain": "",
     "audience": "",
-    "client_id": ""
+    "client_id": "",
+    "client_secret": ""
   }
 }
