--- a/src/testAPI/Deployments/development/deployment.yaml
+++ b/src/testAPI/Deployments/development/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: cart-dev-api
 data:
-  ASPNETCORE_ENVIRONMENT: Production
+  ASPNETCORE_ENVIRONMENT: Development
 ---
 apiVersion: apps/v1
 kind: Deployment
