--- a/src/testAPI/Deployments/development/secret.yaml
+++ b/src/testAPI/Deployments/development/secret.yaml
@@ -6,3 +6,4 @@ type: Opaque
 stringData:
     Auth0__Domain: "iam.bc.dev.americommerce.cloud"
     Auth0__ApiIdentifier: "api.local"
+    Auth0Management__Domain: "domain"
