--- a/src/testAPI/Deployments/development/secret.yaml
+++ b/src/testAPI/Deployments/development/secret.yaml
@@ -4,6 +4,4 @@ metadata:
   name: cart-dev-api-secret
 type: Opaque
 stringData:
-    Auth0__Domain: "iam.bc.dev.americommerce.cloud"
-    Auth0__ApiIdentifier: "api.local"
-    Auth0Management__Domain: "domain"
+    ASPNETCORE_ENVIRONMENT: Development
