--- a/src/testAPI/Deployments/development/secret.yaml
+++ b/src/testAPI/Deployments/development/secret.yaml
@@ -4,4 +4,7 @@ metadata:
   name: cart-dev-api-secret
 type: Opaque
 stringData:
-    ASPNETCORE_ENVIRONMENT: Development
+    ASPNETCORE_ENVIRONMENT: Production
+    Auth0__Domain: "iam.bc.dev.americommerce.cloud"
+    Auth0__ApiIdentifier: "api.local"
+    Auth0Management__Domain: "domain"
